@@ -464,7 +464,6 @@
   "equippedWhileWorkingOnJob" : true,
   "hoursInInventoryUntilUnused" : 12.0,
   "relatedCraftingTypeNames" : [ ],
-  "stockpileGroupName" : "RAW_MATERIALS",
   "tags" : { },
   "placementSoundAssetName" : "HeavyWoodItem",
   "describeAsMaterialOnly" : false,
@@ -482,7 +481,6 @@
   "equippedWhileWorkingOnJob" : true,
   "hoursInInventoryUntilUnused" : 12.0,
   "relatedCraftingTypeNames" : [ ],
-  "stockpileGroupName" : "RAW_MATERIALS",
   "tags" : { },
   "placementSoundAssetName" : "HeavyWoodItem",
   "describeAsMaterialOnly" : false,
@@ -500,7 +498,6 @@
   "equippedWhileWorkingOnJob" : true,
   "hoursInInventoryUntilUnused" : 12.0,
   "relatedCraftingTypeNames" : [ ],
-  "stockpileGroupName" : "RAW_MATERIALS",
   "tags" : { },
   "describeAsMaterialOnly" : false,
   "i18nKey" : "RESOURCE.METAL.BLOOM"
