@@ -23,7 +23,7 @@
   "definitions/types/furnitureCategories.json" : -861173479385694810,
   "definitions/types/furnitureLayouts.json" : -3959292770634985238,
   "definitions/types/furnitureTypes.json" : 4346067019653699556,
-  "definitions/types/itemTypes.json" : 3950294325604291787,
+  "definitions/types/itemTypes.json" : 5058225753114826564,
   "definitions/types/jobTypes.json" : 7309992977075898484,
   "definitions/types/overlapTypes.json" : -692145753600373682,
   "definitions/types/plantSpecies.json" : 9128581493701528031,
@@ -49,7 +49,7 @@
   "tilesets/gui.atlas" : 1738733073468895593,
   "tilesets/masks.atlas" : -7267469657370952532,
   "tilesets/terrain.atlas" : -875876309486559378,
-  "translations/collated.csv" : 6759946868238236849,
+  "translations/collated.csv" : -5175513444847109772,
   "translations/languages.json" : -7270478638500492110,
   "ui/cursors/*.png" : -6131032754499221255,
   "ui/fonts/*.ttf" : -7287232856992254877,
