@@ -749,8 +749,8 @@ RESOURCE.METAL.PLATE.TOOLTIP,"Large, flat plates that are used in some of the la
 RESOURCE.MUSHROOM.LOG.NOUN,Mushroom log,,Pilzstamm,Bouche de champignons,Log di funghi,Troncos de setas,Diário de cogumelos,,,Грибной журнал,Champignon log,,Svamp logg,,,,マッシュルームログ,蘑菇原木,머쉬룸 로그
 RESOURCE.MUSHROOM.LOG.PLURAL,Mushroom logs,,Pilzstämme,Bûches de champignons,Tronchi di funghi,Troncos de setas,Toros de cogumelos,,,Грибные журналы,Champignon logs,,Svamp stockar,,,,きのこログ,蘑菇原木,버섯 통나무
 RESOURCE.MUSHROOM.LOG.TOOLTIP,A log that has been infused with {{INGREDIENT.MUSHROOM.SPAWN.NOUN}}. The body of the log itself is where the mushrooms draw nutrients from. It requires dousing in a {{FURNITURE.MUSHROOM_SHOCK_TANK}} after becoming fully innoculated.,,"Ein Stamm, der mit {{INGREDIENT.MUSHROOM.SPAWN.NOUN}} versehen wurde. Aus dem Baumstamm selbst ziehen die Pilze ihre Nährstoffe. Erfordert nach der vollständigen Einimpfung das Eintauchen in einen {{FURNITURE.MUSHROOM_SHOCK_TANK}}.",Un journal qui a été infusé avec {{INGREDIENT.MUSHROOM.SPAWN.NOUN}}. Le corps de la bûche elle-même est d'où les champignons tirent des nutriments. Il doit être arrosé dans un {{FURNITURE.MUSHROOM_SHOCK_TANK}} après avoir été complètement innoculé.,Un registro che è stato infuso con {{INDIENT.MUSHROOM.SPAWN.NOUN}}. Il corpo del tronco stesso è dove i funghi attingono sostanze nutritive. Richiede il bagnamento in un {{FURNITURE.MUSHROOM_SHOCK_TANK}} dopo essere diventato completamente innoculato.,Un registro que se ha infundido con {{IngreDIENT.MUSHROOM.SPAWN.NOUN}}. El cuerpo del tronco en sí es de donde los hongos extraen nutrientes. Requiere rociar en un {{Furniture.MUSHROOM_SHOCK_TANK}} después de ser completamente inocuo.,Um log que foi infundido com {{INGREIENT.CUSHROOM.SPAWN.NOUN}}. O corpo do tronco em si é de onde os cogumelos extraem nutrientes. É necessário mergulhar em um {{MOBILITURE.MHOOM_SHOCK_TANK}} depois de se tornar totalmente inoculado.,,,"Журнал, который был использован с {{INGREDIENT.MUSHROOM.SPAWN.NOUN}}. Тело самого бревна — это место, где грибы черпают питательные вещества. Он требует обливания в {{FURNITURE.MUSHROOM_SHOCK_TANK}} после того, как он станет полностью безобидным.","En log, der er blevet infunderet med {{INGREDIENT.MUSHROOM.SPAWN.NOUN}}. Selve loggens krop er, hvor svampene trækker næringsstoffer fra. Det kræver dousing i en {{FURNITURE.MUSHROOM_SHOCK_TANK}} efter at være blevet fuldstændig uskyldig.",,En logg som har infunderats med {{VERGENT.MUSTOM.SPAWN.NOUN}}. Kroppen i själva loggen är där svampen drar näringsämnen från. Det kräver dousing i en {{FEBRUARIET.MUSTOM_SHOCK_TANK}} efter att ha blivit helt oskulerad.,,,,{{成分.キノコ.スポーン.NOUN}} が注入されたログ。 ログ自体の本体は、キノコが栄養素を引き出す場所です。 完全に無関心になった後、{{FURNITURE.MUSHROOM_SHOCK_TANK}} で吐き出さなければなりません。,已经注入 {{成分. 蘑菇. 草. 名词}}} 的日志。 原木本身就是蘑菇吸收营养的地方。 在完全无害后，它需要在 {{家具。蘑菇 _Shok_Tank}} 中冲洗。,{{INGREDIENT.MUSHROOM.SPAWN.NOUN}} 이 주입된 통나무. 로그 자체의 몸은 버섯이 영양분을 끌어내는 곳입니다. 완전히 무큐레이션된 후 {{FURNITURE.MUSHROOM_SHOCK_TANK}} 에 담가 두어야 한다.
-RESOURCE.MUSHROOM.LUMBER.NOUN,Log,,Pilzholz,Bûche,Tronco,Tronco,Tronco,Tronco,,Бревно,Log,,Stock,,,,[ログ],日志,로그
-RESOURCE.MUSHROOM.LUMBER.PLURAL,Logs,,Pilzhölzer,Bûches,Tronchi,Troncos,Troncos,Troncos,,Бревна,Logfiler,,Stockar,,,,ログ,日志,로그
+RESOURCE.MUSHROOM.LUMBER.NOUN,Mushroom log,,Pilzholz,Bûche,Tronco,Tronco,Tronco,Tronco,,Бревно,Log,,Stock,,,,[ログ],日志,로그
+RESOURCE.MUSHROOM.LUMBER.PLURAL,Mushroom logs,,Pilzhölzer,Bûches,Tronchi,Troncos,Troncos,Troncos,,Бревна,Logfiler,,Stockar,,,,ログ,日志,로그
 RESOURCE.MUSHROOM.LUMBER.TOOLTIP,Sections of a giant mushroom that can be used in the same way as wooden {{RESOURCE.LOGS.PLURAL}}.,,"Teile eines riesigen Pilzes, der auf die gleiche Weise wie hölzerne {{RESOURCE.LOGS.PLURAL}} verwendet werden kann.",Parties d'un champignon géant qui peut être utilisé de la même manière que le bois {{RESOURCE.LOGS.PLURAL}}.,Sezioni di un fungo gigante che possono essere utilizzate allo stesso modo del legno {{RESOURCE.LOGS.PLURAL}}.,Secciones de un hongo gigante que se pueden utilizar de la misma manera que madera {{RESOURCE.LOGS.PLURAL}}.,Seções de um cogumelo gigante que podem ser usadas da mesma forma que madeira {{RESOURCE.LOGS.PLURAL}}.,,,"Разделы гигантского гриба, которые можно использовать так же, как деревянные {{RESOURCE.LOGS.PLURAL}}.","Sektioner af en kæmpe champignon, der kan bruges på samme måde som træ {{RESOURCE.LOGS.PLURAL}}.",,Sektioner av en jätte svamp som kan användas på samma sätt som trä {{RESOURCE.LOGS.PLURAL}}.,,,,木製 {{リソース.LOGS.PLURAL} と同じ方法で使用することができる巨大なキノコのセクション。,一个巨型蘑菇的部分，可以用相同的方式作为木 {{资源. LOGS.複数}}。,나무와 같은 방법으로 사용할 수있는 거대한 버섯의 섹션 {{RESOURCE.LOGS.PLURAL}}.
 RESOURCE.ORE.CRUSHED.NOUN,Crushed ore,,Erzbrocken,Minerai concassé,Minerale tritato,Mineral triturado,Minério triturado,,,Щебленая руда,Knust malm,,Krossad malm,,,,砕石鉱石,碎矿石,분쇄된 광석
 RESOURCE.ORE.CRUSHED.PLURAL,Crushed ore,,Erzbrocken,Minerai concassé,Minerale tritato,Mineral triturado,Minério triturado,,,Щебленая руда,Knust malm,,Krossad malm,,,,砕石鉱石,碎矿石,분쇄된 광석
