@@ -17,7 +17,6 @@
     "primaryMaterialType": "SEED",
     "maxStackSize": 1,
     "maxHauledAtOnce": 1,
-    "stockpileGroupName": "RAW_MATERIALS",
     "holdPosition": "ON_SHOULDER",
     "impedesMovement": true,
     "blocksMovement": false,
@@ -29,7 +28,6 @@
     "primaryMaterialType": "SEED",
     "maxStackSize": 1,
     "maxHauledAtOnce": 1,
-    "stockpileGroupName": "RAW_MATERIALS",
     "holdPosition": "ON_SHOULDER",
     "impedesMovement": true,
     "blocksMovement": false,
