@@ -3,6 +3,5 @@
   "materialTypes": ["METAL"],
   "primaryMaterialType": "METAL",
   "maxStackSize": 1,
-  "maxHauledAtOnce": 1,
-  "stockpileGroupName": "RAW_MATERIALS"
+  "maxHauledAtOnce": 1
 }]
