@@ -736,8 +736,8 @@ RESOURCE.GEMS.UNREFINED.TOOLTIP,,A hunk of rock containing gems ready to be cut 
 RESOURCE.LOGS.NOUN,,Log,Bûche,Tronco,Stamm,Tronco,Tronco,Tronco,Бревно,Pień,Houtblok,Stock,Tømmerstokk,Farönk,Hirsi
 RESOURCE.LOGS.PLURAL,,Logs,Bûches,Troncos,Stämme,Tronchi,Troncos,Troncos,Бревна,Pnie,Houtblokken,Stockar,Tømmerstokker,Farönkök,Hirret
 RESOURCE.LOGS.TOOLTIP,,"Sections of a tree that are most commonly prepared into {{RESOURCE.PLANKS.PLURAL}}, but have other uses as well.",,,,,,,,,,,,,
-RESOURCE.MUSHROOM.LUMBER.NOUN,,Log,Bûche,Tronco,Stamm,Tronco,Tronco,Tronco,Бревно,Pień,Houtblok,Stock,Tømmerstokk,Farönk,Hirsi
-RESOURCE.MUSHROOM.LUMBER.PLURAL,,Logs,Bûches,Troncos,Stämme,Tronchi,Troncos,Troncos,Бревна,Pnie,Houtblokken,Stockar,Tømmerstokker,Farönkök,Hirret
+RESOURCE.MUSHROOM.LUMBER.NOUN,,Mushroom log,,,,,,,,,,,,,
+RESOURCE.MUSHROOM.LUMBER.PLURAL,,Mushroom logs,,,,,,,,,,,,,
 RESOURCE.MUSHROOM.LUMBER.TOOLTIP,,Sections of a giant mushroom that can be used in the same way as wooden {{RESOURCE.LOGS.PLURAL}}.,,,,,,,,,,,,,
 RESOURCE.METAL.INGOT.NOUN,,Ingot,Lingot,Lingote,Barren,Lingotto,Lingote,Lingote,Слиток,Sztabka,Staaf,Tacka,Barre,Öntvény,Harkko
 RESOURCE.METAL.INGOT.PLURAL,,Ingots,Lingots,Lingotes,Barren,Lingotti,Lingotes,Lingotes,Слитки,Sztabki,Staven,Tackor,Barrer,Öntvények,Harkot
