@@ -2,6 +2,8 @@ Alpha 5.0.1
 
 - Added a display of current number of beds to settler management screen
 - Fixed the tutorial, which was having issues with tracking stockpile tiles after the change in Alpha 5
+- Hiding unused wood types from bushes in stockpile management
+- Removed 2 of 3 mushroom log types and metal blooms from stockpile management - these items should probably not be stored in a stockpile
 
 Alpha 5 - 19th December 2020
 
